<resources>
    <string name="app_name">毕业班</string>
    <string name="title_freshnews">FreshNews</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_chatroom">ChatRoom</string>
    <string name="title_me">Me</string>

    <string name="prompt_username">username</string>
    <string name="prompt_password">password</string>
    <string name="action_register">SignUp</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_switch">Switch to logout</string>
    <string name="edit_your_name">Edit your name</string>
    <string name="user_settings">Settings</string>
    <string name="setting">Settings</string>

    <string name="user_name">user name</string>
    <string name="name">name</string>
    <string name="avatar">Avatar</string>
    <string name="alias">Alias</string>
    <string name="unset">Unset</string>
    <string name="about">About</string>
    <string name="other">Others</string>
    <string name="empty">Empty</string>
    <string name="exit_class">Exit Class</string>

    <string name="publish">Publish</string>

    <string name="gradu_class">Graduation Class</string>
    <string name="title_gradu_main">GraduationMain</string>
    <string name="title_gradu_join">GraduationJoin</string>
    <string name="title_gradu_create">GraduationCreate</string>
    <string name="join">Join</string>
    <string name="create">Create</string>
    <string name="class_name">Class Name</string>
    <string name="gradu_year">Graduation Year</string>
    <string name="district">District</string>
    <string name="title_activity_setting">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="stopchat">stop chat</string>
    <string name="allowchat">allow chat</string>

    <string name="clip">Clip</string>
</resources>
