<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_user"
        android:title="@string/user_settings">
        <com.laocuo.biyeban.settings.AvatarPreference
            android:key="pref_key_user_avatar"
            android:dependency="pref_key_login_status"/>
        <EditTextPreference
            android:key="pref_key_user_alias"
            android:title="@string/alias"
            android:dependency="pref_key_login_status"/>
        <SwitchPreference
            android:key="pref_key_login_status"
            android:title="@string/login"
            android:summary="@string/login_switch"
            android:defaultValue="false"/>
        <Preference
            android:key="pref_key_exit_class"
            android:title="@string/exit_class"/>
        <Preference
            android:key="pref_key_clear_cache"
            android:title="@string/clear_cache"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other">
        <PreferenceScreen
            android:key="pref_key_about"
            android:title="@string/about"/>
    </PreferenceCategory>
</PreferenceScreen>
