<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/create_class"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/create"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_button_bg"/>
        <Button
            android:id="@+id/join_class"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/join"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_button_bg"/>
        <Button
            android:id="@+id/logout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/logout"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_button_bg"/>
    </LinearLayout>

</RelativeLayout>
